# bio-read

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: bump-version.sh
src/: lib.rs  main.rs
tests/: demo.cast  demo.cwrt  demo.yaml  integration_test.rs
tests/input/: the_last_question.md  varied_length.txt
tests/output/: the_last_question.md  varied_length.txt
