[package]
name = "bio-read"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable link-time optimization.
codegen-units = 1  # Set the number of codegen units to 1.

[[bin]]
path = "src/main.rs"
name = "br"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
