[package]
name = "bio-read"
version = "0.2.1"
edition = "2021"
include = ["/src", "LICENSE", "README.md"]
repository = "https://github.com/PRO-2684/bio-read"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "Bionic reading in terminal."
keywords = ["bionic", "reading", "terminal", "cli", "rust"]

[dependencies]
anstyle = "1.0.10"
argh = "0.1.13"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable link-time optimization.
codegen-units = 1  # Set the number of codegen units to 1.

[[bin]]
path = "src/main.rs"
name = "br"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
